deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-test-app
  template:
    metadata:
      labels:
        app: php-test-app
        test: test2233445566
    spec:
      containers:
        - name: container
          image: image-registry.openshift-image-registry.svc:5000/demo-php/php-test-app:2025-08-25-06-51-30
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
