service.yaml
kind: Service
apiVersion: v1
metadata:
  name: php-test-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: php-test-app
