route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: php-test-app
spec:
  host: php-test-app-demo-cicd.apps.a.ocp.com
  to:
    kind: Service
    name: php-test-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
